parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> insert_statement
Rule 2     statement -> select_statement
Rule 3     statement -> delete_statement
Rule 4     insert_statement -> INSERT into_kw TABLE_NAME VALUES OPENPAR value_list CLOSEPAR SEMICOLON
Rule 5     insert_statement -> INSERT into_kw TABLE_NAME OPENPAR column_name CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
Rule 6     insert_statement -> INSERT into_kw TABLE_NAME SET assignment_list SEMICOLON
Rule 7     select_statement -> SELECT columns FROM TABLE_NAME SEMICOLON
Rule 8     select_statement -> SELECT columns FROM TABLE_NAME WHERE condition SEMICOLON
Rule 9     delete_statement -> DELETE FROM TABLE_NAME SEMICOLON
Rule 10    delete_statement -> DELETE FROM TABLE_NAME WHERE condition SEMICOLON
Rule 11    into_kw -> INTO
Rule 12    into_kw -> empty
Rule 13    columns -> ASTERISK
Rule 14    columns -> column_name
Rule 15    column_name -> COLUMN_NAME
Rule 16    column_name -> column_name COMMA COLUMN_NAME
Rule 17    assignment_list -> COLUMN_NAME EQUAL literals
Rule 18    assignment_list -> assignment_list COMMA COLUMN_NAME EQUAL literals
Rule 19    value_list -> literals
Rule 20    value_list -> value_list COMMA literals
Rule 21    literals -> STRING_LIT
Rule 22    literals -> INT_LIT
Rule 23    literals -> DOUBLE_LIT
Rule 24    literals -> NULL
Rule 25    condition -> col_cond
Rule 26    condition -> string_cond
Rule 27    condition -> num_cond
Rule 28    condition -> NOT OPENPAR string_cond CLOSEPAR
Rule 29    condition -> NOT OPENPAR num_cond CLOSEPAR
Rule 30    col_cond -> column_name comparison_op string_exp
Rule 31    col_cond -> column_name comparison_op num_exp
Rule 32    col_cond -> column_name LIKE string_exp
Rule 33    col_cond -> column_name NOT LIKE string_exp
Rule 34    string_cond -> string_exp LIKE string_exp
Rule 35    string_cond -> string_exp NOT LIKE string_exp
Rule 36    string_cond -> string_exp comparison_op string_exp
Rule 37    string_cond -> STRCMP OPENPAR string_exp COMMA string_exp CLOSEPAR
Rule 38    string_exp -> STRING_LIT
Rule 39    num_cond -> num_exp comparison_op num_exp
Rule 40    num_cond -> num_exp BETWEEN num_exp AND num_exp
Rule 41    num_cond -> num_exp NOT NULL
Rule 42    num_cond -> num_exp IS NULL
Rule 43    num_exp -> num_exp ADD num_factor
Rule 44    num_exp -> num_factor SUBTRACT num_exp
Rule 45    num_exp -> num_factor
Rule 46    num_factor -> num_factor ASTERISK num_term
Rule 47    num_factor -> num_factor DIVIDE num_term
Rule 48    num_factor -> num_factor DIVIDE_INT num_term
Rule 49    num_factor -> num_factor MODULO num_term
Rule 50    num_factor -> num_term
Rule 51    num_term -> OPENPAR num_exp CLOSEPAR
Rule 52    num_term -> num_val
Rule 53    num_val -> INT_LIT
Rule 54    num_val -> DOUBLE_LIT
Rule 55    num_val -> COLUMN_NAME
Rule 56    comparison_op -> GE
Rule 57    comparison_op -> GT
Rule 58    comparison_op -> LE
Rule 59    comparison_op -> LT
Rule 60    comparison_op -> NE
Rule 61    comparison_op -> EQUAL
Rule 62    comparison_op -> EQUAL_NULL
Rule 63    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 43
AND                  : 40
ASTERISK             : 13 46
BETWEEN              : 40
CLOSEPAR             : 4 5 5 28 29 37 51
COLUMN_NAME          : 15 16 17 18 55
COMMA                : 16 18 20 37
DELETE               : 9 10
DIVIDE               : 47
DIVIDE_INT           : 48
DOUBLE_LIT           : 23 54
EQUAL                : 17 18 61
EQUAL_NULL           : 62
FROM                 : 7 8 9 10
GE                   : 56
GT                   : 57
INSERT               : 4 5 6
INTO                 : 11
INT_LIT              : 22 53
IS                   : 42
LE                   : 58
LIKE                 : 32 33 34 35
LT                   : 59
MODULO               : 49
NE                   : 60
NOT                  : 28 29 33 35 41
NULL                 : 24 41 42
OPENPAR              : 4 5 5 28 29 37 51
SELECT               : 7 8
SEMICOLON            : 4 5 6 7 8 9 10
SET                  : 6
STRCMP               : 37
STRING_LIT           : 21 38
SUBTRACT             : 44
TABLE_NAME           : 4 5 6 7 8 9 10
VALUES               : 4 5
WHERE                : 8 10
error                : 

Nonterminals, with rules where they appear

assignment_list      : 6 18
col_cond             : 25
column_name          : 5 14 16 30 31 32 33
columns              : 7 8
comparison_op        : 30 31 36 39
condition            : 8 10
delete_statement     : 3
empty                : 12
insert_statement     : 1
into_kw              : 4 5 6
literals             : 17 18 19 20
num_cond             : 27 29
num_exp              : 31 39 39 40 40 40 41 42 43 44 51
num_factor           : 43 44 45 46 47 48 49
num_term             : 46 47 48 49 50
num_val              : 52
select_statement     : 2
statement            : 0
string_cond          : 26 28
string_exp           : 30 32 33 34 34 35 35 36 36 37 37
value_list           : 4 5 20

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . insert_statement
    (2) statement -> . select_statement
    (3) statement -> . delete_statement
    (4) insert_statement -> . INSERT into_kw TABLE_NAME VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (5) insert_statement -> . INSERT into_kw TABLE_NAME OPENPAR column_name CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (6) insert_statement -> . INSERT into_kw TABLE_NAME SET assignment_list SEMICOLON
    (7) select_statement -> . SELECT columns FROM TABLE_NAME SEMICOLON
    (8) select_statement -> . SELECT columns FROM TABLE_NAME WHERE condition SEMICOLON
    (9) delete_statement -> . DELETE FROM TABLE_NAME SEMICOLON
    (10) delete_statement -> . DELETE FROM TABLE_NAME WHERE condition SEMICOLON

    INSERT          shift and go to state 7
    SELECT          shift and go to state 5
    DELETE          shift and go to state 6

    statement                      shift and go to state 1
    select_statement               shift and go to state 2
    insert_statement               shift and go to state 3
    delete_statement               shift and go to state 4

state 1

    (0) S' -> statement .



state 2

    (2) statement -> select_statement .

    $end            reduce using rule 2 (statement -> select_statement .)


state 3

    (1) statement -> insert_statement .

    $end            reduce using rule 1 (statement -> insert_statement .)


state 4

    (3) statement -> delete_statement .

    $end            reduce using rule 3 (statement -> delete_statement .)


state 5

    (7) select_statement -> SELECT . columns FROM TABLE_NAME SEMICOLON
    (8) select_statement -> SELECT . columns FROM TABLE_NAME WHERE condition SEMICOLON
    (13) columns -> . ASTERISK
    (14) columns -> . column_name
    (15) column_name -> . COLUMN_NAME
    (16) column_name -> . column_name COMMA COLUMN_NAME

    ASTERISK        shift and go to state 8
    COLUMN_NAME     shift and go to state 11

    column_name                    shift and go to state 9
    columns                        shift and go to state 10

state 6

    (9) delete_statement -> DELETE . FROM TABLE_NAME SEMICOLON
    (10) delete_statement -> DELETE . FROM TABLE_NAME WHERE condition SEMICOLON

    FROM            shift and go to state 12


state 7

    (4) insert_statement -> INSERT . into_kw TABLE_NAME VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (5) insert_statement -> INSERT . into_kw TABLE_NAME OPENPAR column_name CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (6) insert_statement -> INSERT . into_kw TABLE_NAME SET assignment_list SEMICOLON
    (11) into_kw -> . INTO
    (12) into_kw -> . empty
    (63) empty -> .

    INTO            shift and go to state 13
    TABLE_NAME      reduce using rule 63 (empty -> .)

    into_kw                        shift and go to state 15
    empty                          shift and go to state 14

state 8

    (13) columns -> ASTERISK .

    FROM            reduce using rule 13 (columns -> ASTERISK .)


state 9

    (14) columns -> column_name .
    (16) column_name -> column_name . COMMA COLUMN_NAME

    FROM            reduce using rule 14 (columns -> column_name .)
    COMMA           shift and go to state 16


state 10

    (7) select_statement -> SELECT columns . FROM TABLE_NAME SEMICOLON
    (8) select_statement -> SELECT columns . FROM TABLE_NAME WHERE condition SEMICOLON

    FROM            shift and go to state 17


state 11

    (15) column_name -> COLUMN_NAME .

    CLOSEPAR        reduce using rule 15 (column_name -> COLUMN_NAME .)
    COMMA           reduce using rule 15 (column_name -> COLUMN_NAME .)
    FROM            reduce using rule 15 (column_name -> COLUMN_NAME .)


state 12

    (9) delete_statement -> DELETE FROM . TABLE_NAME SEMICOLON
    (10) delete_statement -> DELETE FROM . TABLE_NAME WHERE condition SEMICOLON

    TABLE_NAME      shift and go to state 18


state 13

    (11) into_kw -> INTO .

    TABLE_NAME      reduce using rule 11 (into_kw -> INTO .)


state 14

    (12) into_kw -> empty .

    TABLE_NAME      reduce using rule 12 (into_kw -> empty .)


state 15

    (4) insert_statement -> INSERT into_kw . TABLE_NAME VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (5) insert_statement -> INSERT into_kw . TABLE_NAME OPENPAR column_name CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (6) insert_statement -> INSERT into_kw . TABLE_NAME SET assignment_list SEMICOLON

    TABLE_NAME      shift and go to state 19


state 16

    (16) column_name -> column_name COMMA . COLUMN_NAME

    COLUMN_NAME     shift and go to state 20


state 17

    (7) select_statement -> SELECT columns FROM . TABLE_NAME SEMICOLON
    (8) select_statement -> SELECT columns FROM . TABLE_NAME WHERE condition SEMICOLON

    TABLE_NAME      shift and go to state 21


state 18

    (9) delete_statement -> DELETE FROM TABLE_NAME . SEMICOLON
    (10) delete_statement -> DELETE FROM TABLE_NAME . WHERE condition SEMICOLON

    SEMICOLON       shift and go to state 22
    WHERE           shift and go to state 23


state 19

    (4) insert_statement -> INSERT into_kw TABLE_NAME . VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (5) insert_statement -> INSERT into_kw TABLE_NAME . OPENPAR column_name CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (6) insert_statement -> INSERT into_kw TABLE_NAME . SET assignment_list SEMICOLON

    VALUES          shift and go to state 25
    OPENPAR         shift and go to state 24
    SET             shift and go to state 26


state 20

    (16) column_name -> column_name COMMA COLUMN_NAME .

    CLOSEPAR        reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    COMMA           reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    LIKE            reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    NOT             reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    GE              reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    GT              reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    LE              reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    LT              reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    NE              reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    EQUAL           reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    EQUAL_NULL      reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)
    FROM            reduce using rule 16 (column_name -> column_name COMMA COLUMN_NAME .)


state 21

    (7) select_statement -> SELECT columns FROM TABLE_NAME . SEMICOLON
    (8) select_statement -> SELECT columns FROM TABLE_NAME . WHERE condition SEMICOLON

    SEMICOLON       shift and go to state 27
    WHERE           shift and go to state 28


state 22

    (9) delete_statement -> DELETE FROM TABLE_NAME SEMICOLON .

    $end            reduce using rule 9 (delete_statement -> DELETE FROM TABLE_NAME SEMICOLON .)


state 23

    (10) delete_statement -> DELETE FROM TABLE_NAME WHERE . condition SEMICOLON
    (25) condition -> . col_cond
    (26) condition -> . string_cond
    (27) condition -> . num_cond
    (28) condition -> . NOT OPENPAR string_cond CLOSEPAR
    (29) condition -> . NOT OPENPAR num_cond CLOSEPAR
    (30) col_cond -> . column_name comparison_op string_exp
    (31) col_cond -> . column_name comparison_op num_exp
    (32) col_cond -> . column_name LIKE string_exp
    (33) col_cond -> . column_name NOT LIKE string_exp
    (34) string_cond -> . string_exp LIKE string_exp
    (35) string_cond -> . string_exp NOT LIKE string_exp
    (36) string_cond -> . string_exp comparison_op string_exp
    (37) string_cond -> . STRCMP OPENPAR string_exp COMMA string_exp CLOSEPAR
    (39) num_cond -> . num_exp comparison_op num_exp
    (40) num_cond -> . num_exp BETWEEN num_exp AND num_exp
    (41) num_cond -> . num_exp NOT NULL
    (42) num_cond -> . num_exp IS NULL
    (15) column_name -> . COLUMN_NAME
    (16) column_name -> . column_name COMMA COLUMN_NAME
    (38) string_exp -> . STRING_LIT
    (43) num_exp -> . num_exp ADD num_factor
    (44) num_exp -> . num_factor SUBTRACT num_exp
    (45) num_exp -> . num_factor
    (46) num_factor -> . num_factor ASTERISK num_term
    (47) num_factor -> . num_factor DIVIDE num_term
    (48) num_factor -> . num_factor DIVIDE_INT num_term
    (49) num_factor -> . num_factor MODULO num_term
    (50) num_factor -> . num_term
    (51) num_term -> . OPENPAR num_exp CLOSEPAR
    (52) num_term -> . num_val
    (53) num_val -> . INT_LIT
    (54) num_val -> . DOUBLE_LIT
    (55) num_val -> . COLUMN_NAME

    NOT             shift and go to state 36
    STRCMP          shift and go to state 42
    COLUMN_NAME     shift and go to state 43
    STRING_LIT      shift and go to state 37
    OPENPAR         shift and go to state 38
    INT_LIT         shift and go to state 40
    DOUBLE_LIT      shift and go to state 45

    num_cond                       shift and go to state 44
    column_name                    shift and go to state 31
    col_cond                       shift and go to state 30
    string_exp                     shift and go to state 34
    num_factor                     shift and go to state 32
    num_term                       shift and go to state 29
    condition                      shift and go to state 39
    string_cond                    shift and go to state 41
    num_exp                        shift and go to state 33
    num_val                        shift and go to state 35

state 24

    (5) insert_statement -> INSERT into_kw TABLE_NAME OPENPAR . column_name CLOSEPAR VALUES OPENPAR value_list CLOSEPAR SEMICOLON
    (15) column_name -> . COLUMN_NAME
    (16) column_name -> . column_name COMMA COLUMN_NAME

    COLUMN_NAME     shift and go to state 11

    column_name                    shift and go to state 46

state 25

    (4) insert_statement -> INSERT into_kw TABLE_NAME VALUES . OPENPAR value_list CLOSEPAR SEMICOLON

    OPENPAR         shift and go to state 47


state 26

    (6) insert_statement -> INSERT into_kw TABLE_NAME SET . assignment_list SEMICOLON
    (17) assignment_list -> . COLUMN_NAME EQUAL literals
    (18) assignment_list -> . assignment_list COMMA COLUMN_NAME EQUAL literals

    COLUMN_NAME     shift and go to state 49

    assignment_list                shift and go to state 48

state 27

    (7) select_statement -> SELECT columns FROM TABLE_NAME SEMICOLON .

    $end            reduce using rule 7 (select_statement -> SELECT columns FROM TABLE_NAME SEMICOLON .)


state 28

    (8) select_statement -> SELECT columns FROM TABLE_NAME WHERE . condition SEMICOLON
    (25) condition -> . col_cond
    (26) condition -> . string_cond
    (27) condition -> . num_cond
    (28) condition -> . NOT OPENPAR string_cond CLOSEPAR
    (29) condition -> . NOT OPENPAR num_cond CLOSEPAR
    (30) col_cond -> . column_name comparison_op string_exp
    (31) col_cond -> . column_name comparison_op num_exp
    (32) col_cond -> . column_name LIKE string_exp
    (33) col_cond -> . column_name NOT LIKE string_exp
    (34) string_cond -> . string_exp LIKE string_exp
    (35) string_cond -> . string_exp NOT LIKE string_exp
    (36) string_cond -> . string_exp comparison_op string_exp
    (37) string_cond -> . STRCMP OPENPAR string_exp COMMA string_exp CLOSEPAR
    (39) num_cond -> . num_exp comparison_op num_exp
    (40) num_cond -> . num_exp BETWEEN num_exp AND num_exp
    (41) num_cond -> . num_exp NOT NULL
    (42) num_cond -> . num_exp IS NULL
    (15) column_name -> . COLUMN_NAME
    (16) column_name -> . column_name COMMA COLUMN_NAME
    (38) string_exp -> . STRING_LIT
    (43) num_exp -> . num_exp ADD num_factor
    (44) num_exp -> . num_factor SUBTRACT num_exp
    (45) num_exp -> . num_factor
    (46) num_factor -> . num_factor ASTERISK num_term
    (47) num_factor -> . num_factor DIVIDE num_term
    (48) num_factor -> . num_factor DIVIDE_INT num_term
    (49) num_factor -> . num_factor MODULO num_term
    (50) num_factor -> . num_term
    (51) num_term -> . OPENPAR num_exp CLOSEPAR
    (52) num_term -> . num_val
    (53) num_val -> . INT_LIT
    (54) num_val -> . DOUBLE_LIT
    (55) num_val -> . COLUMN_NAME

    NOT             shift and go to state 36
    STRCMP          shift and go to state 42
    COLUMN_NAME     shift and go to state 43
    STRING_LIT      shift and go to state 37
    OPENPAR         shift and go to state 38
    INT_LIT         shift and go to state 40
    DOUBLE_LIT      shift and go to state 45

    num_term                       shift and go to state 29
    num_exp                        shift and go to state 33
    column_name                    shift and go to state 31
    string_cond                    shift and go to state 41
    num_factor                     shift and go to state 32
    condition                      shift and go to state 50
    num_cond                       shift and go to state 44
    string_exp                     shift and go to state 34
    col_cond                       shift and go to state 30
    num_val                        shift and go to state 35

state 29

    (50) num_factor -> num_term .

    SUBTRACT        reduce using rule 50 (num_factor -> num_term .)
    ASTERISK        reduce using rule 50 (num_factor -> num_term .)
    DIVIDE          reduce using rule 50 (num_factor -> num_term .)
    DIVIDE_INT      reduce using rule 50 (num_factor -> num_term .)
    MODULO          reduce using rule 50 (num_factor -> num_term .)
    BETWEEN         reduce using rule 50 (num_factor -> num_term .)
    NOT             reduce using rule 50 (num_factor -> num_term .)
    IS              reduce using rule 50 (num_factor -> num_term .)
    ADD             reduce using rule 50 (num_factor -> num_term .)
    GE              reduce using rule 50 (num_factor -> num_term .)
    GT              reduce using rule 50 (num_factor -> num_term .)
    LE              reduce using rule 50 (num_factor -> num_term .)
    LT              reduce using rule 50 (num_factor -> num_term .)
    NE              reduce using rule 50 (num_factor -> num_term .)
    EQUAL           reduce using rule 50 (num_factor -> num_term .)
    EQUAL_NULL      reduce using rule 50 (num_factor -> num_term .)
    AND             reduce using rule 50 (num_factor -> num_term .)
    SEMICOLON       reduce using rule 50 (num_factor -> num_term .)
    CLOSEPAR        reduce using rule 50 (num_factor -> num_term .)


state 30

    (25) condition -> col_cond .

    SEMICOLON       reduce using rule 25 (condition -> col_cond .)


state 31

    (30) col_cond -> column_name . comparison_op string_exp
    (31) col_cond -> column_name . comparison_op num_exp
    (32) col_cond -> column_name . LIKE string_exp
    (33) col_cond -> column_name . NOT LIKE string_exp
    (16) column_name -> column_name . COMMA COLUMN_NAME
    (56) comparison_op -> . GE
    (57) comparison_op -> . GT
    (58) comparison_op -> . LE
    (59) comparison_op -> . LT
    (60) comparison_op -> . NE
    (61) comparison_op -> . EQUAL
    (62) comparison_op -> . EQUAL_NULL

    LIKE            shift and go to state 55
    NOT             shift and go to state 52
    COMMA           shift and go to state 16
    GE              shift and go to state 51
    GT              shift and go to state 56
    LE              shift and go to state 57
    LT              shift and go to state 59
    NE              shift and go to state 58
    EQUAL           shift and go to state 60
    EQUAL_NULL      shift and go to state 54

    comparison_op                  shift and go to state 53

state 32

    (44) num_exp -> num_factor . SUBTRACT num_exp
    (45) num_exp -> num_factor .
    (46) num_factor -> num_factor . ASTERISK num_term
    (47) num_factor -> num_factor . DIVIDE num_term
    (48) num_factor -> num_factor . DIVIDE_INT num_term
    (49) num_factor -> num_factor . MODULO num_term

    SUBTRACT        shift and go to state 65
    CLOSEPAR        reduce using rule 45 (num_exp -> num_factor .)
    ADD             reduce using rule 45 (num_exp -> num_factor .)
    BETWEEN         reduce using rule 45 (num_exp -> num_factor .)
    NOT             reduce using rule 45 (num_exp -> num_factor .)
    IS              reduce using rule 45 (num_exp -> num_factor .)
    GE              reduce using rule 45 (num_exp -> num_factor .)
    GT              reduce using rule 45 (num_exp -> num_factor .)
    LE              reduce using rule 45 (num_exp -> num_factor .)
    LT              reduce using rule 45 (num_exp -> num_factor .)
    NE              reduce using rule 45 (num_exp -> num_factor .)
    EQUAL           reduce using rule 45 (num_exp -> num_factor .)
    EQUAL_NULL      reduce using rule 45 (num_exp -> num_factor .)
    SEMICOLON       reduce using rule 45 (num_exp -> num_factor .)
    AND             reduce using rule 45 (num_exp -> num_factor .)
    ASTERISK        shift and go to state 61
    DIVIDE          shift and go to state 63
    DIVIDE_INT      shift and go to state 62
    MODULO          shift and go to state 64


state 33

    (39) num_cond -> num_exp . comparison_op num_exp
    (40) num_cond -> num_exp . BETWEEN num_exp AND num_exp
    (41) num_cond -> num_exp . NOT NULL
    (42) num_cond -> num_exp . IS NULL
    (43) num_exp -> num_exp . ADD num_factor
    (56) comparison_op -> . GE
    (57) comparison_op -> . GT
    (58) comparison_op -> . LE
    (59) comparison_op -> . LT
    (60) comparison_op -> . NE
    (61) comparison_op -> . EQUAL
    (62) comparison_op -> . EQUAL_NULL

    BETWEEN         shift and go to state 70
    NOT             shift and go to state 66
    IS              shift and go to state 67
    ADD             shift and go to state 69
    GE              shift and go to state 51
    GT              shift and go to state 56
    LE              shift and go to state 57
    LT              shift and go to state 59
    NE              shift and go to state 58
    EQUAL           shift and go to state 60
    EQUAL_NULL      shift and go to state 54

    comparison_op                  shift and go to state 68

state 34

    (34) string_cond -> string_exp . LIKE string_exp
    (35) string_cond -> string_exp . NOT LIKE string_exp
    (36) string_cond -> string_exp . comparison_op string_exp
    (56) comparison_op -> . GE
    (57) comparison_op -> . GT
    (58) comparison_op -> . LE
    (59) comparison_op -> . LT
    (60) comparison_op -> . NE
    (61) comparison_op -> . EQUAL
    (62) comparison_op -> . EQUAL_NULL

    LIKE            shift and go to state 73
    NOT             shift and go to state 72
    GE              shift and go to state 51
    GT              shift and go to state 56
    LE              shift and go to state 57
    LT              shift and go to state 59
    NE              shift and go to state 58
    EQUAL           shift and go to state 60
    EQUAL_NULL      shift and go to state 54

    comparison_op                  shift and go to state 71

state 35

    (52) num_term -> num_val .

    SUBTRACT        reduce using rule 52 (num_term -> num_val .)
    ASTERISK        reduce using rule 52 (num_term -> num_val .)
    DIVIDE          reduce using rule 52 (num_term -> num_val .)
    DIVIDE_INT      reduce using rule 52 (num_term -> num_val .)
    MODULO          reduce using rule 52 (num_term -> num_val .)
    ADD             reduce using rule 52 (num_term -> num_val .)
    SEMICOLON       reduce using rule 52 (num_term -> num_val .)
    CLOSEPAR        reduce using rule 52 (num_term -> num_val .)
    BETWEEN         reduce using rule 52 (num_term -> num_val .)
    NOT             reduce using rule 52 (num_term -> num_val .)
    IS              reduce using rule 52 (num_term -> num_val .)
    GE              reduce using rule 52 (num_term -> num_val .)
    GT              reduce using rule 52 (num_term -> num_val .)
    LE              reduce using rule 52 (num_term -> num_val .)
    LT              reduce using rule 52 (num_term -> num_val .)
    NE              reduce using rule 52 (num_term -> num_val .)
    EQUAL           reduce using rule 52 (num_term -> num_val .)
    EQUAL_NULL      reduce using rule 52 (num_term -> num_val .)
    AND             reduce using rule 52 (num_term -> num_val .)


state 36

    (28) condition -> NOT . OPENPAR string_cond CLOSEPAR
    (29) condition -> NOT . OPENPAR num_cond CLOSEPAR

    OPENPAR         shift and go to state 74


state 37

    (38) string_exp -> STRING_LIT .

    CLOSEPAR        reduce using rule 38 (string_exp -> STRING_LIT .)
    SEMICOLON       reduce using rule 38 (string_exp -> STRING_LIT .)
    COMMA           reduce using rule 38 (string_exp -> STRING_LIT .)
    LIKE            reduce using rule 38 (string_exp -> STRING_LIT .)
    NOT             reduce using rule 38 (string_exp -> STRING_LIT .)
    GE              reduce using rule 38 (string_exp -> STRING_LIT .)
    GT              reduce using rule 38 (string_exp -> STRING_LIT .)
    LE              reduce using rule 38 (string_exp -> STRING_LIT .)
    LT              reduce using rule 38 (string_exp -> STRING_LIT .)
    NE              reduce using rule 38 (string_exp -> STRING_LIT .)
    EQUAL           reduce using rule 38 (string_exp -> STRING_LIT .)
    EQUAL_NULL      reduce using rule 38 (string_exp -> STRING_LIT .)


state 38

    (51) num_term -> OPENPAR . num_exp CLOSEPAR
    (43) num_exp -> . num_exp ADD num_factor
    (44) num_exp -> . num_factor SUBTRACT num_exp
    (45) num_exp -> . num_factor
    (46) num_factor -> . num_factor ASTERISK num_term
    (47) num_factor -> . num_factor DIVIDE num_term
    (48) num_factor -> . num_factor DIVIDE_INT num_term
    (49) num_factor -> . num_factor MODULO num_term
    (50) num_factor -> . num_term
    (51) num_term -> . OPENPAR num_exp CLOSEPAR
    (52) num_term -> . num_val
    (53) num_val -> . INT_LIT
    (54) num_val -> . DOUBLE_LIT
    (55) num_val -> . COLUMN_NAME

    OPENPAR         shift and go to state 38
    INT_LIT         shift and go to state 40
    DOUBLE_LIT      shift and go to state 45
    COLUMN_NAME     shift and go to state 76

    num_term                       shift and go to state 29
    num_exp                        shift and go to state 75
    num_val                        shift and go to state 35
    num_factor                     shift and go to state 32

state 39

    (10) delete_statement -> DELETE FROM TABLE_NAME WHERE condition . SEMICOLON

    SEMICOLON       shift and go to state 77


state 40

    (53) num_val -> INT_LIT .

    SUBTRACT        reduce using rule 53 (num_val -> INT_LIT .)
    ASTERISK        reduce using rule 53 (num_val -> INT_LIT .)
    DIVIDE          reduce using rule 53 (num_val -> INT_LIT .)
    DIVIDE_INT      reduce using rule 53 (num_val -> INT_LIT .)
    MODULO          reduce using rule 53 (num_val -> INT_LIT .)
    BETWEEN         reduce using rule 53 (num_val -> INT_LIT .)
    NOT             reduce using rule 53 (num_val -> INT_LIT .)
    IS              reduce using rule 53 (num_val -> INT_LIT .)
    ADD             reduce using rule 53 (num_val -> INT_LIT .)
    GE              reduce using rule 53 (num_val -> INT_LIT .)
    GT              reduce using rule 53 (num_val -> INT_LIT .)
    LE              reduce using rule 53 (num_val -> INT_LIT .)
    LT              reduce using rule 53 (num_val -> INT_LIT .)
    NE              reduce using rule 53 (num_val -> INT_LIT .)
    EQUAL           reduce using rule 53 (num_val -> INT_LIT .)
    EQUAL_NULL      reduce using rule 53 (num_val -> INT_LIT .)
    CLOSEPAR        reduce using rule 53 (num_val -> INT_LIT .)
    SEMICOLON       reduce using rule 53 (num_val -> INT_LIT .)
    AND             reduce using rule 53 (num_val -> INT_LIT .)


state 41

    (26) condition -> string_cond .

    SEMICOLON       reduce using rule 26 (condition -> string_cond .)


state 42

    (37) string_cond -> STRCMP . OPENPAR string_exp COMMA string_exp CLOSEPAR

    OPENPAR         shift and go to state 78


state 43

    (15) column_name -> COLUMN_NAME .
    (55) num_val -> COLUMN_NAME .

  ! reduce/reduce conflict for NOT resolved using rule 15 (column_name -> COLUMN_NAME .)
  ! reduce/reduce conflict for GE resolved using rule 15 (column_name -> COLUMN_NAME .)
  ! reduce/reduce conflict for GT resolved using rule 15 (column_name -> COLUMN_NAME .)
  ! reduce/reduce conflict for LE resolved using rule 15 (column_name -> COLUMN_NAME .)
  ! reduce/reduce conflict for LT resolved using rule 15 (column_name -> COLUMN_NAME .)
  ! reduce/reduce conflict for NE resolved using rule 15 (column_name -> COLUMN_NAME .)
  ! reduce/reduce conflict for EQUAL resolved using rule 15 (column_name -> COLUMN_NAME .)
  ! reduce/reduce conflict for EQUAL_NULL resolved using rule 15 (column_name -> COLUMN_NAME .)
    LIKE            reduce using rule 15 (column_name -> COLUMN_NAME .)
    NOT             reduce using rule 15 (column_name -> COLUMN_NAME .)
    COMMA           reduce using rule 15 (column_name -> COLUMN_NAME .)
    GE              reduce using rule 15 (column_name -> COLUMN_NAME .)
    GT              reduce using rule 15 (column_name -> COLUMN_NAME .)
    LE              reduce using rule 15 (column_name -> COLUMN_NAME .)
    LT              reduce using rule 15 (column_name -> COLUMN_NAME .)
    NE              reduce using rule 15 (column_name -> COLUMN_NAME .)
    EQUAL           reduce using rule 15 (column_name -> COLUMN_NAME .)
    EQUAL_NULL      reduce using rule 15 (column_name -> COLUMN_NAME .)
    SUBTRACT        reduce using rule 55 (num_val -> COLUMN_NAME .)
    ASTERISK        reduce using rule 55 (num_val -> COLUMN_NAME .)
    DIVIDE          reduce using rule 55 (num_val -> COLUMN_NAME .)
    DIVIDE_INT      reduce using rule 55 (num_val -> COLUMN_NAME .)
    MODULO          reduce using rule 55 (num_val -> COLUMN_NAME .)
    BETWEEN         reduce using rule 55 (num_val -> COLUMN_NAME .)
    IS              reduce using rule 55 (num_val -> COLUMN_NAME .)
    ADD             reduce using rule 55 (num_val -> COLUMN_NAME .)

  ! NOT             [ reduce using rule 55 (num_val -> COLUMN_NAME .) ]
  ! GE              [ reduce using rule 55 (num_val -> COLUMN_NAME .) ]
  ! GT              [ reduce using rule 55 (num_val -> COLUMN_NAME .) ]
  ! LE              [ reduce using rule 55 (num_val -> COLUMN_NAME .) ]
  ! LT              [ reduce using rule 55 (num_val -> COLUMN_NAME .) ]
  ! NE              [ reduce using rule 55 (num_val -> COLUMN_NAME .) ]
  ! EQUAL           [ reduce using rule 55 (num_val -> COLUMN_NAME .) ]
  ! EQUAL_NULL      [ reduce using rule 55 (num_val -> COLUMN_NAME .) ]


state 44

    (27) condition -> num_cond .

    SEMICOLON       reduce using rule 27 (condition -> num_cond .)


state 45

    (54) num_val -> DOUBLE_LIT .
